--- a/habithub/docker/nginx/nginx.conf
+++ b/habithub/docker/nginx/nginx.conf
@@ -8,6 +8,6 @@ server {
         proxy_pass http://habithub;
     }
     location /static/ {
-        alias /app/static/;
+        alias /app/staticfiles/;
     }
 }
