--- a/habithub/docker/nginx/nginx.conf
+++ b/habithub/docker/nginx/nginx.conf
@@ -2,7 +2,7 @@ upstream habithub {
     server habithub:8080;
 }
 server {
-    listen:80;
+    listen 80;
     location / {
         include proxy_params;
         proxy_pass http://habithub;
