--- a/habithub/docker-compose.yml
+++ b/habithub/docker-compose.yml
@@ -20,7 +20,7 @@ services:
     env_file:
       - ./habithub/.env
     command: >
-      bash -c "python manage.py collectstatic --noinput && gunicorn -b 0.0.0.0:8080 habithub.wsgi:application"
+      bash -c "python manage.py collectstatic --noinput && python manage.py migrate users && python manage.py migrate && gunicorn -b 0.0.0.0:8080 habithub.wsgi:application"
     ports:
       - "8080:8080"
 
